data/manifests/artifacthub/prometheus-community/kube-prometheus-stack/116_validatingwebhookconfiguration_release-name-kube-promethe-admission.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: release-name-kube-promethe-admission
  annotations: null
  labels:
    app: kube-prometheus-stack-admission
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: 77.14.0
    app.kubernetes.io/part-of: kube-prometheus-stack
    chart: kube-prometheus-stack-77.14.0
    release: release-name
    heritage: Helm
    app.kubernetes.io/name: kube-prometheus-stack-prometheus-operator
    app.kubernetes.io/component: prometheus-operator-webhook
webhooks:
- name: prometheusrulemutate.monitoring.coreos.com
  failurePolicy: Ignore
  rules:
  - apiGroups:
    - monitoring.coreos.com
    apiVersions:
    - '*'
    resources:
    - prometheusrules
    operations:
    - CREATE
    - UPDATE
  clientConfig:
    service:
      namespace: default
      name: release-name-kube-promethe-operator
      path: /admission-prometheusrules/validate
  timeoutSeconds: 10
  admissionReviewVersions:
  - v1
  - v1beta1
  sideEffects: None
